@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.62 2000-08-01 19:51:05 macgyver Exp $
+$Id: NEWS,v 1.63 2000-08-01 20:13:07 macgyver Exp $
 
 1.2.0 - Released: 08/??/2000
 ----------------------------
@@ -8,6 +8,7 @@ $Id: NEWS,v 1.62 2000-08-01 19:51:05 macgyver Exp $
   Solaris).
 - Added the DeleteAbortedStores directive.
 - Fixed a minor bug in SITE HELP.
+- Eliminated a race when logging in with MaxClients.
 
 1.2.0RC2 - Released: 07/28/2000
 -------------------------------
